--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "cwd": "${workspaceFolder}",
       "runtimeExecutable": "deno",
-      "runtimeArgs": ["run", "-A", "--inspect-brk"],
+      "runtimeArgs": ["run", "-A","-c", "tsconfig.json", "--inspect-brk"],
       "args": ["${relativeFile}"],
       "port": 9229,
       "outputCapture": "std"
